Pequeños cambios (mi parte funciona).

--- a/listaEventos.html
+++ b/listaEventos.html
@@ -57,7 +57,7 @@
             <div class="col-md-5">
                 <h3 id="title"></h3>
                 <p id="description"></p>
-                <p id="time"></p>
+                <p id="date"></p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
