--- a/listaEventos.html
+++ b/listaEventos.html
@@ -58,6 +58,7 @@
                 <h3 id="title"></h3>
                 <p id="description"></p>
                 <p id="date"></p>
+                <p id="infoDate"></p>
                 <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
                 <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
