--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <meta charset="UTF-8">
 	<title>erasmusMadrid | Home</title>
 
-
 </head>
 
 <body>
@@ -25,13 +24,78 @@
 		<div id="load-event"></div>
 
 		<div id="content">
-			<div class="jumbotron">
+			<div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+		    	<!-- Carousel indicators -->
+		        <ol class="carousel-indicators">
+		            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		            <li data-target="#myCarousel" data-slide-to="1"></li>
+		            <li data-target="#myCarousel" data-slide-to="2"></li>
+		            <li data-target="#myCarousel" data-slide-to="3"></li>
+		            <li data-target="#myCarousel" data-slide-to="4"></li>
+		        </ol>   
+		       <!-- Carousel items -->
+		        <div class="carousel-inner">
+		        	<div class="active item">
+		            	<div class="jumbotron" id="metropolis">
+			                <div class="container">
+			                    <h1>erasmusMadrid</h1>
+			                    <p>Descubre, Comparte, Disfruta</p>
+			                    <a href="listaEventos.html">¡Aprende más!</a>
+			                </div>
+			            </div>
+		            </div>
+		            <div class="item">
+		        		<div class="jumbotron" id="palacio">
+			                <div class="container">
+			                    <h1>erasmusMadrid</h1>
+			                    <p>Descubre, Comparte, Disfruta</p>
+			                    <a href="listaEventos.html">¡Aprende más!</a>
+			                </div>
+			            </div>
+		            </div>
+		            <div class="item">
+		            	<div class="jumbotron" id="ayuntamiento">
+			                <div class="container">
+			                    <h1>erasmusMadrid</h1>
+			                    <p>Descubre, Comparte, Disfruta</p>
+			                    <a href="listaEventos.html">¡Aprende más!</a>
+			                </div>
+			            </div>
+			        </div>
+		            <div class="item">
+		            	<div class="jumbotron" id="plazamayor">
+			                <div class="container">
+			                    <h1>erasmusMadrid</h1>
+			                    <p>Descubre, Comparte, Disfruta</p>
+			                    <a href="listaEventos.html">¡Aprende más!</a>
+			                </div>
+			            </div>
+		            </div>
+		            <div class="item">
+		            	<div class="jumbotron" id="skyline">
+			                <div class="container">
+			                    <h1>erasmusMadrid</h1>
+			                    <p>Descubre, Comparte, Disfruta</p>
+			                    <a href="listaEventos.html">¡Aprende más!</a>
+			                </div>
+			            </div>
+		            </div>
+		        </div>
+		        <!-- Carousel nav -->
+		        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+		            <span class="glyphicon glyphicon-chevron-left"></span>
+		        </a>
+		        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+		            <span class="glyphicon glyphicon-chevron-right"></span>
+		        </a>
+   			</div>
+			<!--<div class="jumbotron">
 			    <div class="container">
 			        <h1>erasmusMadrid</h1>
 			        <p>Descubre, Comparte, Disfruta</p>
 			        <a href="listaEventos.html">Aprende más</a>
 			    </div>
-			</div>
+			</div>-->
 
 			<div class="neighborhood-guides">
 			    <div class="container">
