--- a/perfil.html
+++ b/perfil.html
@@ -7,127 +7,110 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<meta charset="UTF-8">
+
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
 	<title>erasmusMadrid | Perfil</title>
 
 	<script src="./static/script.js"></script>
-<!--
-	<script>
-	$(document).ready(function(){
-		$("#load-header").load("header-footer.html #header");
-		$("#load-registry").load("header-footer.html #formRegistryModal");
-		$("#load-log").load("header-footer.html #formLogModal");
-		$("#load-footer").load("header-footer.html #footer");
+	<script src="./static/perfil.js"></script>
 
-		$("#config").click(function(){
-			$("#configOptions").slideToggle(500);
-		});
-		$("#profileEvents").click(function(){
-			$("#ownEvents").slideToggle(500);
-		})		
-	});
-	</script>
--->
 </head>
+
 <body>
 	<div id="wrapper">
 		<div id="load-header"></div>
 		<div id="load-registry"></div>
 		<div id="load-log"></div>
-	<!-- encabezado -->
-		<div class="row"id="profileHeader">
-			<div class="col-md-2">
-				<img class="img-responsive portfolio-item" src="./static/marco.jpg">
-			</div>
-			<div class="col-md-10">
-				<h1>Marco y su mono Amedio</h1>
-			</div>
-		</div>
-		<div class="col-md-12"><hr></div>
-	<!-- /encabezado -->
-	<!-- configuracion -->
-		<div id="config">
-			<h2>Configuración</h2>
-		</div>
-		<div class="container" id="configOptions">
+		<div id="load-event"></div>
+	
+		<div class="menu">
+			<!-- Menu icon -->
+			<div class="icon-close glyphicon glyphicon-menu-hamburger"></div>
+
+			<!-- Menu -->
 			<ul>
-				<li>Foto de perfil</li>
-				<li>Contraseña</li>
-				<li>Nombre de usuario</li>
-				<li>Email</li>
+				<li><a href="#">Foto de perfil</a></li>
+				<li><a href="#">Contraseña</a></li>
+				<li><a href="#">Nombre de usuario</a></li>
+				<li><a href="#">Email</a></li>
 			</ul>
 		</div>
-		<div class="col-md-12"><hr></div>
-	<!-- /configuracion -->
-	<!-- lista de eventos -->
-		<div id="profileEvents">
-			<h2>Lista de Eventos</h2>
-		</div>
-		
-			<div class="container" id="ownEvents">
 
-<div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Búsqueda de eventos
-                    <small>
-                        <p>Categoría</p>
-
-						<div class="row">
-	                        <select class="col-md-2">
-	                             <option value="todos">Todos</option>
-	                             <option value="turismo">Turismo</option>
-	                             <option value="gastronomia">Gastronomía</option>
-	                             <option value="vidaNocturna">Vida nocturna</option>         
-	                        </select>
-	                        <select class="col-md-2">
-	                             <option value="recentDate">Más reciente</option>
-	                             <option value="lastDate">Más antigua</option>
-	                             <option value="mvp">Mejor valorada</option>         
-	                        </select>
-	                        <button class="col-md-2" type="button" id="createEvent" data-toggle="modal" data-target="#formCreateEvent">Crear Evento</button>
-	                        <form class="pull-right" id="tfnewsearch" method="get" action="http://www.google.com">
-	                            <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
-	                        </form>
-	                        <div class="tfclear"></div> 
-	                    </div>
-
-                    </small>
-                </h1>
-            </div>
-        </div>
-
-				<div class="row">
-		            <div class="col-md-7">
-		                <img class="img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
-		            </div>
-		            <div class="col-md-5">
-		                <h3>Conoce Madrid</h3>
-		                <h4><div id="14270474947718" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:40" type="text/javascript"></script></h4>
-		                <p>Disfruta de una visita guiada gratuita por el Madrid de los Austrias y los Borbones, en castellano y en inglés, todos los sábados y domingos a las 11 frente al oso y el madroño.</p>
-						<p>Enjoy a free tour around the royal Madrid, in English and Spanish, every saturday and sanday at 11 in front of the oso y el madroño statue.</p>
-		                <a class="btn btn-primary" href="#">Ver evento  <span class="glyphicon glyphicon-chevron-right"></span></a>
-		            </div>
-		        </div>
-				<hr>
-				<div class="row">
-					<div class="col-md-7">
-					<img class="img-responsive" src="./static/AranjuezTour.jpg" style="width:653px;height:280px;">
-					</div>
-					<div class="col-md-5">
-						<h3>Visita Aranjuez</h3>
-						<h4><div id="14270474947716" class="wE"><script src="http://widget-engine.com/w:0:003:14270474947719:3:000000:41" type="text/javascript"></script></h4>
-						<p>Seguimos conociendo los alrededores más bonitos de Madrid, en esta ocasión visita guiada a Aranjuez y Chinchón, Sábado 11 de Abril, 19 euros transporte incluido, quedamos a las 9:00 en la estación de Atocha.</p>
-						<a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-					</div>
+		<!-- encabezado -->
+		<div class="container">
+			<div class="fb-profile">
+				<img align="left" class="fb-image-lg" src="http://lorempixel.com/850/280/nightlife/5/" alt="Profile image example"/>
+				<img align="left" class="fb-image-profile thumbnail" src="./static/marco.jpg" alt="Profile image example"/>
+				<div class="fb-profile-text">
+					<h1 id="profile-name">Marco y Amedio <small><span class="glyphicon glyphicon-cog" id="config"></span></small></h1>
+					<p>Buscando a mi madre por Madrid</p>
 				</div>
-				<hr>				
+			</div>
+		</div>
+		<!-- /encabezado -->
+
+		<div class="container" id="eventList">
+	        <!-- Page Heading -->
+			<div class="row search-menu">
+				<div class="col-lg-12">
+					<h1 class="page-header">Tus eventos
+						<small>
+							<p></p>
+							<p></p>
+							<p>Categoría</p>
+							<select id="sel_categ">
+								<option class="refresh" value="Todos">Todos</option>
+								<option class="refresh" value="Turismo">Turismo</option>
+								<option class="refresh" value="Gastronomía">Gastronomía</option>
+								<option class="refresh" value="Vida nocturna">Vida nocturna</option>
+							</select>
+
+							<form id="tfnewsearch" method="get" action="http://www.google.com">
+								<input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
+							</form>
+							<div class="tfclear"></div>
+						</small>
+					</h1>
+				</div>
 			</div>
 
-	<!-- /lista de evento -->
+			<!-- /.row -->
+			<div class="row prototype event">
+				<div class="col-md-7">
+					<img class="event-image img-responsive" src="" style="width:653px;height:280px;">
+				</div>
+				<div class="col-md-5">
+					<h3 id="title"></h3>
+					<p id="description"></p>
+					<p id="date"></p>
+					<p id="infoDate"></p>
+					<a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+					<a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
+				</div>
+				<hr>
+			</div>
+
+			<div class="row event">
+				<div class="col-md-7">
+					<img class="event-image img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
+				</div>
+				<div class="col-md-5">
+					<h3 id="title">Conoce Madrid</h3>
+					<p id="description">Disfruta de una visita guiada gratuita por el Madrid de los Austrias y los Borbones, en castellano y en inglés, todos los sábados y domingos a las 11 frente al oso y el madroño.</p>
+					<p id="date">15/1/2016</p>
+					<p id="infoDate"></p>
+					<a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+					<a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
+				</div>
+				<hr>
+			</div>
+	        <!-- /.row -->
+		</div>
+
 		<footer>
 			<div id="load-footer"></div>
 		</footer>
 	</div>
 </body>
-</html>
