--- a/evento.html
+++ b/evento.html
@@ -49,7 +49,7 @@
         <!-- Portfolio Item Heading -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header" id="eventTitle">BeerPong Tournament</h1>
+                <h1 class="page-header" id="eventTitle"></h1>
             </div>
         </div>
         <!-- /.row -->
@@ -58,17 +58,15 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" src="./static/bpong.jpg" alt="">
+                <img class="img-responsive" id="eventImg1" src="" alt="">
             </div>
 
             <div class="col-md-4">
                 <h3>Descripción</h3>
-                <p>El BEER PONG es un juego de beber de origen norteamericano en el que los jugadores tratan de encestar desde el extremo de una mesa, con pelotas de ping-pong en vasos llenos de cerveza. Se juega por equipos formados por dos personas y 6 vasos dispuestos de forma triangular.
-                Cada martes os invitamos al TORNEO de BEER PONG y a su animada fiesta universitaria para desafiar otros estudiantes y ganar premios y sorpresas!
-                </p>
+                <p id="eventDescription"></p>
                 <ul>
-                    <li>C/ Espoz y Mina 20</li>
-                    <li>23:30</li>
+                    <li id="eventDate"></li>
+                    <li id="eventTime"></li>
                 </ul>
                 <div id="googleMap" style="height:198px;"></div>
             </div>
@@ -80,23 +78,23 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">¡No te pierdas la mejor fiesta de Madrid!</h3>
+                <h3 class="page-header" id="eventEslogan"></h3>
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" src="./static/bpong1.jpg" alt="">
+                <img class="img-responsive portfolio-item" id="eventImg2" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" src="./static/bpong2.jpg" alt="">
+                <img class="img-responsive portfolio-item" id="eventImg3" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" src="./static/bpong3.jpg" alt="">
+                <img class="img-responsive portfolio-item" id="eventImg4" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" src="./static/bpong4.jpg" alt="">
+                <img class="img-responsive portfolio-item" id="eventImg5" src="" alt="">
             </div>
 
         </div>
