Esqueleto evento + script

--- a/evento.html
+++ b/evento.html
@@ -82,19 +82,19 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" id="eventImg2" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg2" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" id="eventImg3" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg3" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" id="eventImg4" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg4" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item" id="eventImg5" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg5" src="" alt="">
             </div>
 
         </div>
