Errores sign in y create event

--- a/header-footer.html
+++ b/header-footer.html
@@ -88,6 +88,11 @@
 							<span class="sr-only"></span>
 							<span class="text"></span>
 						</div>
+						<div style="display:none" class="registry-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
 							<button type="submit" class="guardar btn btn-success pull-right">Guardar</button>
@@ -244,7 +249,12 @@
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
 							<span class="sr-only"></span>
 							<span class="text"></span>
-						</div>				
+						</div>			
+						<div style="display:none" class="cevent-error alert alert-danger" role="alert">
+							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+							<span class="sr-only"></span>
+							<span class="text"></span>
+						</div>	
 						<div class="modal-footer">
 							<button type="button" class="btn btn-danger pull-left" data-dismiss="modal">Cancelar</button>
 							<button type="submit" class="btn btn-success pull-right">Crear</button>
