--- a/evento.html
+++ b/evento.html
@@ -10,6 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script src="static/evento.js"></script>
     <title>erasmusMadrid | Evento</title>
 
     <script src="./static/script.js"></script>
@@ -65,8 +66,9 @@
                 <h3>Descripción</h3>
                 <p id="eventDescription"></p>
                 <ul>
+                    <li id="eventAddress"></li>
                     <li id="eventDate"></li>
-                    <li id="eventTime"></li>
+                    <li id="eventHour"></li>
                 </ul>
                 <div id="googleMap" style="height:198px;"></div>
             </div>
