--- a/listaEventos.html
+++ b/listaEventos.html
@@ -59,8 +59,8 @@
                 <p id="description"></p>
                 <p id="date"></p>
                 <p id="infoDate"></p>
-                <a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
+                <a class="btn btn-primary verEvento" >Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" style="display:none" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
             </div>
             <hr>
         </div>
