Success popup entre otras

--- a/header-footer.html
+++ b/header-footer.html
@@ -28,6 +28,8 @@
 	    </div>
     </div>
 
+    <div class="alert alert-success" id="sign-success"role="alert">¡Enhorabuena! Se ha registrado correctamente</div>
+
     <!--Formulario de registro-->
 	<div class="modal fade" id="formRegistryModal" tabindex="-1" role="dialog" aria-labellendy="formModalLabel" aria-hidden="true">
 		<div class="modal-dialog">
