--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 		<div id="load-registry"></div>
 		<div id="load-log"></div>
 		<div id="load-event"></div>
+		<div id="load-alert"></div>
 
 		<div id="content">
+
 			<div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
 		    	<!-- Carousel indicators -->
 		        <ol class="carousel-indicators">
