estilo al mostrar la lista de eventos
está cambiado tanto en el principal como en el perfil

--- a/perfil.html
+++ b/perfil.html
@@ -77,34 +77,23 @@
 			</div>
 
 			<!-- /.row -->
-			<div class="row prototype event">
-				<div class="col-md-7">
-					<img class="event-image img-responsive" src="" style="width:653px;height:280px;">
-				</div>
-				<div class="col-md-5">
-					<h3 id="title"></h3>
-					<p id="description"></p>
-					<p id="date"></p>
-					<p id="infoDate"></p>
-					<a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-					<a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
-				</div>
-				<hr>
-			</div>
+			<div id="lista">
+					<div class="row prototype event">
+						<div class="col-md-7">
+							<img class="event-image img-responsive" src="" style="width:653px;height:280px;">
+						</div>
+						<div class="col-md-5">
+							<h3 id="title"></h3>
+							<p id="description"></p>
+							<p id="date"></p>
+							<p id="infoDate"></p>
+							<a class="btn btn-primary verEvento" >Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+							<a class="btn btn-primary" style="display:none" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
+						</div>
+						<hr>
+					</div>
 
-			<div class="row event">
-				<div class="col-md-7">
-					<img class="event-image img-responsive" src="./static/MEET-AND-EXPLORE-WEB.jpg" style="width:653px;height:280px;">
-				</div>
-				<div class="col-md-5">
-					<h3 id="title">Conoce Madrid</h3>
-					<p id="description">Disfruta de una visita guiada gratuita por el Madrid de los Austrias y los Borbones, en castellano y en inglés, todos los sábados y domingos a las 11 frente al oso y el madroño.</p>
-					<p id="date">15/1/2016</p>
-					<p id="infoDate"></p>
-					<a class="btn btn-primary" href="#">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-					<a class="btn btn-primary" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
-				</div>
-				<hr>
+					<hr id="startEvents">
 			</div>
 	        <!-- /.row -->
 		</div>
