--- a/header-footer.html
+++ b/header-footer.html
@@ -158,7 +158,7 @@
 						</div>
 						<div class="form-group">
 							<label for="descripcion">Descripción *</label>
-							<textarea type="text" class="descripcion form-control" id="descripcion" name="descripcion" placeholder="Introduzca la descripción del evento"></textarea>
+							<textarea type="text" class="descripcion form-control" id="descripcion" name="description" placeholder="Introduzca la descripción del evento"></textarea>
 						</div>
 						<div style="display:none" class="desc-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -167,27 +167,28 @@
 						</div>
 						<div class="form-group">
 							<label for="Categoria">Categoría *</label>
-							<select id="categoria">
-	                             <option value="turismo">Turismo</option>
-	                             <option value="gastronomia">Gastronomía</option>
-	                             <option value="vidaNocturna">Vida nocturna</option>         
+							<select id="categoria", name="category">
+	                             <option value="Turismo">Turismo</option>
+	                             <option value="Gastronomia">Gastronomía</option>
+	                             <option value="Vida Nocturna">Vida nocturna</option>         
                         	</select>
 						</div>
 						<div class="form-group">
 							<label for="direccion">Dirección del evento *</label>
-							<select id="calle">
-	                             <option value="calle">Calle</option>
-	                             <option value="avenida">Avenida</option>
-	                             <option value="via">Vía</option>     
-	                             <option value="carretera">Carretera</option>
-	                             <option value="avenida">Avenida</option>
-	                             <option value="plaza">Plaza</option> 
-	                             <option value="ronda">Ronda</option>
-	                             <option value="urbanizacion">Urbanización</option>
-	                             <option value="paseo">Paseo</option>     
+							<select id="calle", name="calle">
+	                             <option value="Calle">Calle</option>
+	                             <option value="Avenida">Avenida</option>
+	                             <option value="Via">Vía</option>     
+	                             <option value="Carretera">Carretera</option>
+	                             <option value="Avenida">Avenida</option>
+	                             <option value="Plaza">Plaza</option> 
+	                             <option value="Ronda">Ronda</option>
+	                             <option value="Urbanizacion">Urbanización</option>
+	                             <option value="Paseo">Paseo</option>
+	                             <option value="C/">C/</option>     
                         	</select>
-							<input type="text" class="direccion form-control" id="bloque" name="direccion" placeholder="Nombre">
-							<input type="number" class="numero form-control" id="bloque" name="numero" placeholder="Número">
+							<input type="text" class="direccion form-control" id="bloque" name="address" placeholder="Nombre">
+							<input type="number" class="numero form-control" id="bloque" name="number" placeholder="Número">
 						</div>
 						<div style="display:none" class="num-error alert alert-danger" role="alert">
 							<span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
@@ -211,7 +212,7 @@
 						</div>
 							<div class="form-group">
 							<label for="comentario">Eslogan</label>
-							<input type="text" class="form-control" id="comentario" name="comentario" placeholder="Introduzca un eslogan para su evento">
+							<input type="text" class="form-control" id="comentario" name="comment" placeholder="Introduzca un eslogan para su evento">
 						</div>
 						<div>
 							<label for="foto">Introduzca imágenes para el evento (mínimo una)</label>
