Preparado para guardar imagenes en static
Aunque no se como poder guardarlas todavia....

--- a/header-footer.html
+++ b/header-footer.html
@@ -29,6 +29,7 @@
     </div>
 
     <div class="alert alert-success" id="sign-success"role="alert">¡Enhorabuena! Se ha registrado correctamente</div>
+    <div class="alert alert-success" id="event-success"role="alert">¡Enhorabuena! El evento se ha creado correctamente</div>
 
     <!--Formulario de registro-->
 	<div class="modal fade" id="formRegistryModal" tabindex="-1" role="dialog" aria-labellendy="formModalLabel" aria-hidden="true">
@@ -221,6 +222,7 @@
 							<input disabled class="image3" type="file" name="img" accept="image/*">
 							<input disabled class="image4" type="file" name="img" accept="image/*">
 							<input disabled class="image5" type="file" name="img" accept="image/*">
+							<input disabled class="image6" type="file" name="img" accept="image/*">
 						</div>
 						</br>
 						<div style="display:none" class="img1-error alert alert-danger" role="alert">
