--- a/listaEventos.html
+++ b/listaEventos.html
@@ -41,7 +41,7 @@
 							 <option class="refresh" value="Vida nocturna">Vida nocturna</option>
 						</select>
 						<form id="tfnewsearch" method="get" action="http://www.google.com">
-							<input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="search" class="tfbutton">
+							<input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="Buscar" class="tfbutton">
 						</form>
 						<div class="tfclear"></div>
 					</small>
