--- a/listaEventos.html
+++ b/listaEventos.html
@@ -60,6 +60,7 @@
 						<p id="description"></p>
 						<p id="date"></p>
 						<p id="infoDate"></p>
+                        <img src="static/calendar.png" id="calendario">
 						<a class="btn btn-primary verEvento" >Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
 						<a class="btn btn-primary" style="display:none" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
 					</div>
