prototipo de lista eventos actualizado
Convierte el mes de número a nombre y lo coloca en la imagen del
calendario. También saca el mensaje de la cuenta atrás para el evento
pero no me gusta el estilo, habrá que revisarlo al final.
En el style.css he quitado una cosa que lleva sobrando desde hace mazo y
he añadido lo correspondiente a los cambios en listaEventos

--- a/listaEventos.html
+++ b/listaEventos.html
@@ -51,22 +51,35 @@
 		<!-- /.row -->
 
 		<div id="lista">
-				<div class="row prototype event">
-					<div class="col-md-7">
-						<img class="event-image img-responsive" src="" style="width:653px;height:280px;">
-					</div>
-					<div class="col-md-5">
-						<h3 id="title"></h3>
-						<p id="description"></p>
-						<p id="date"></p>
-						<p id="infoDate"></p>
-						<a class="btn btn-primary verEvento" >Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
-						<a class="btn btn-primary" style="display:none" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
-					</div>
-					<hr>
+			<div class="row prototype event">
+				<div class="col-md-7">
+					<img class="event-image img-responsive" src="" style="width:653px;height:280px;">
 				</div>
+				<div class="col-md-5">
+					<h3 id="title"></h3>
+					<p id="description"></p>
+					<table class="col-md-4 dateImg">
+						<tr class="year">
+							<td id="year"></td>
+						</tr>
+						<tr class="day">
+							<td id="day"></td>
+						</tr>
+						<tr class="month">
+							<td id="month"></td>
+						</tr>
+					</table>
+					<p id="infoDate" class="col-md-8 dateMssg"></p>
+					<a class="btn btn-primary verEvento">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+					<a class="btn btn-primary" style="display:none" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
+				</div>
+				<hr>
+			</div>
 
-				<hr id="startEvents">
+			<hr id="startEvents">
+
+			<!-- eventos de prueba -->
+			<!-- /eventos de prueba-->
 
 		</div>
 
