Consulta eventos subscritos
Funciona y devuelve la lista de eventos subscritos por ese usuario en
perfil.html.

--- a/header-footer.html
+++ b/header-footer.html
@@ -19,7 +19,7 @@
 	    </div>
 	    <div>
 	    	<div class="pull-right" id="nav">
-	    		<button type="button" class="button-nav userProfile" id="log" style="display:none" ></button>
+	    		<a class="button-nav userProfile" id="log" style="display:none" href="perfil.html"></a>
 		        <button type="button" class="button-nav logIn" id="log" data-toggle="modal" data-target="#formLogModal">Log in</button>
 		       	<button type="button" class="button-nav signIn" id="sign" data-toggle="modal" data-target="#formRegistryModal">Sign in</button>
 		       	<button type="button" class="button-nav createEvent" id="createEvent" data-toggle="modal" data-target="#formCreateEvent" style="display:none">Crear evento</button>
