--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 			                    <img src="./static/night.jpg">
 			                    <h3>Vida nocturna</h3>
 			                    <p>Deja que la noche te confunda</p>
-			                    <p><a href="listaEventos.html">Fiestas sorprendentes</a></p>
+			                    <p><a href="listaEventos.html"  id="Vida nocturna" class="toEventFilter">Fiestas sorprendentes</a></p>
 			                </div>
 			            </div>
 			            <div class="col-md-4">
@@ -120,7 +120,7 @@
 			                    <img src="./static/debod.jpg">
 			                     <h3>Turismo</h3>
 			                    <p>Saca tu lado culto</p>
-			                    <p><a href="listaEventos.html">Lugares turísticos</a></p>
+			                    <p><a href="listaEventos.html" id="Turismo" class="toEventFilter">Lugares turísticos</a></p>
 			                </div>
 			            </div>
 			            <div class="col-md-4">
@@ -128,7 +128,7 @@
 			                    <img src="./static/tio-pepe.jpg">
 			                    <h3>Gastronomía</h3>
 			                    <p>Aprende de la dieta mediterránea</p>
-			                    <p><a href="listaEventos.html">Tapas y cañas</a></p>
+			                    <p><a href="listaEventos.html" id="Gastronomía" class="toEventFilter">Tapas y cañas</a></p>
 			                </div>
 			            </div>
 			        </div>
