Trabajo de hoy.
no me deja hacer commits en mi rama

--- a/header-footer.html
+++ b/header-footer.html
@@ -14,7 +14,7 @@
     <div class="container" id="header">
 		<div>
 			<div class="pull-left" id="nav">
-	        	<button type="button" class="button-nav" id="home" href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> HOME</button>
+	        	<a href="index.html"><button type="button" class="button-nav" id="home"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> HOME</button></a>
 	        </div>
 	    </div>
 	    <div>
