--- a/perfil.html
+++ b/perfil.html
@@ -128,7 +128,7 @@
 							<p id="description"></p>
 							<p id="date"></p>
 							<p id="infoDate"></p>
-							<a class="btn btn-primary verEvento" >Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
+							<a class="btn btn-primary verEvento" href="evento.html">Ver evento <span class="glyphicon glyphicon-chevron-right"></span></a>
 							<a class="btn btn-primary" style="display:none" href="#">Suscribirme <span class="glyphicon glyphicon glyphicon-plus"></span></a>
 						</div>
 						<hr>
