Editar perfil cerrado

--- a/header-footer.html
+++ b/header-footer.html
@@ -217,7 +217,7 @@
 							<input type="text" class="form-control" id="comentario" name="comment" placeholder="Introduzca un eslogan para su evento">
 						</div>
 						<div>
-							<label for="foto">Introduzca imágenes para el evento (mínimo una)</label>
+							<label for="foto">Introduzca imágenes para el evento (mínimo dos)</label>
 							<input class="image1" type="file" name="img" accept="image/*">
 							<input disabled class="image2" type="file" name="img" accept="image/*">
 							<input disabled class="image3" type="file" name="img" accept="image/*">
