Actualizaciones de Edu

--- a/listaEventos.html
+++ b/listaEventos.html
@@ -41,8 +41,8 @@
 							 <option class="refresh" value="Gastronomía">Gastronomía</option>
 							 <option class="refresh" value="Vida nocturna">Vida nocturna</option>
 						</select>
-						<form id="tfnewsearch" method="get" action="http://www.google.com">
-							<input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="Buscar" class="tfbutton">
+						<form id="tfnewsearch">
+							<input type="text" id="texto" class="tftextinput" name="q" size="21" maxlength="120"><input type="submit" value="Buscar" id="search" class="tfbutton">
 						</form>
 						<div class="tfclear"></div>
 					</small>
