--- a/evento.html
+++ b/evento.html
@@ -40,7 +40,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-responsive" id="eventImg1" src="" alt="">
+                <img class="img-responsive" id="eventImg1" src="" alt="" style="width:960px;height:438px">
             </div>
 
             <div class="col-md-4">
@@ -65,19 +65,19 @@
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg2" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg2"  style="width:262.5px;height:174.45px" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg3" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg3"  style="width:262.5px;height:174.45px" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg4" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg4"  style="width:262.5px;height:174.45px" src="" alt="">
             </div>
 
             <div class="col-sm-3 col-xs-6">
-                <img class="img-responsive portfolio-item imgEvent" id="eventImg5" src="" alt="">
+                <img class="img-responsive portfolio-item imgEvent" id="eventImg5"  style="width:262.5px;height:174.45px" src="" alt="">
             </div>
 
         </div>
