Algunos cambios varios

--- a/header-footer.html
+++ b/header-footer.html
@@ -219,7 +219,7 @@
 						<div>
 							<label for="foto">Introduzca imágenes para el evento (mínimo dos)</label>
 							<input class="image1" type="file" name="img" accept="image/*">
-							<input disabled class="image2" type="file" name="img" accept="image/*">
+							<input class="image2" type="file" name="img" accept="image/*">
 							<input disabled class="image3" type="file" name="img" accept="image/*">
 							<input disabled class="image4" type="file" name="img" accept="image/*">
 							<input disabled class="image5" type="file" name="img" accept="image/*">
