Style success alert

--- a/header-footer.html
+++ b/header-footer.html
@@ -30,7 +30,7 @@
 
     <div class="alert alert-success" id="sign-success" role="alert">¡Enhorabuena! Se ha registrado correctamente</div>
     <div class="alert alert-success" id="event-success" role="alert">¡Enhorabuena! El evento se ha creado correctamente</div>
-    <div class="alert alert-success" id="perfil-success" role="alert"></div>
+    <div class="alert alert-success" id="perfil-success" role="alert">¡Enhorabuena! Ha modificado el parámetro correctamente</div>
 
     <!--Formulario de registro-->
 	<div class="modal fade" id="formRegistryModal" tabindex="-1" role="dialog" aria-labellendy="formModalLabel" aria-hidden="true">
